exports[`Checkbox has correct checked=true rendering 1`] = `
<label
  aria-label="Test Checkbox"
  className="grommetux-check-box">
  <span>
    <input
      checked={true}
      className="grommetux-check-box__input"
      defaultChecked={undefined}
      disabled={undefined}
      id="test"
      name={undefined}
      onChange={undefined}
      tabIndex="0"
      type="checkbox" />
    <span
      className="grommetux-check-box__control">
      <svg
        className="grommetux-check-box__control-check"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24">
        <path
          d="M6,11.3 L10.3,16 L18,6.2"
          fill="none" />
      </svg>
    </span>
  </span>
  <span
    className="grommetux-check-box__label">
    Test Checkbox
  </span>
</label>
`;

exports[`Checkbox has correct default options 1`] = `
<label
  aria-label="Test Checkbox"
  className="grommetux-check-box">
  <span>
    <input
      checked={undefined}
      className="grommetux-check-box__input"
      defaultChecked={undefined}
      disabled={undefined}
      id="test"
      name={undefined}
      onChange={undefined}
      tabIndex="0"
      type="checkbox" />
    <span
      className="grommetux-check-box__control">
      <svg
        className="grommetux-check-box__control-check"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24">
        <path
          d="M6,11.3 L10.3,16 L18,6.2"
          fill="none" />
      </svg>
    </span>
  </span>
  <span
    className="grommetux-check-box__label">
    Test Checkbox
  </span>
</label>
`;

exports[`Checkbox has correct disabled=true rendering 1`] = `
<label
  aria-label="Test Checkbox"
  className="grommetux-check-box grommetux-check-box--disabled">
  <span>
    <input
      checked={undefined}
      className="grommetux-check-box__input"
      defaultChecked={undefined}
      disabled={true}
      id="test"
      name={undefined}
      onChange={undefined}
      tabIndex="0"
      type="checkbox" />
    <span
      className="grommetux-check-box__control">
      <svg
        className="grommetux-check-box__control-check"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24">
        <path
          d="M6,11.3 L10.3,16 L18,6.2"
          fill="none" />
      </svg>
    </span>
  </span>
  <span
    className="grommetux-check-box__label">
    Test Checkbox
  </span>
</label>
`;

exports[`Checkbox has correct reverse=true rendering 1`] = `
<label
  aria-label="Test Checkbox"
  className="grommetux-check-box">
  <span
    className="grommetux-check-box__label">
    Test Checkbox
  </span>
  <span>
    <input
      checked={undefined}
      className="grommetux-check-box__input"
      defaultChecked={undefined}
      disabled={undefined}
      id="test"
      name={undefined}
      onChange={undefined}
      tabIndex="0"
      type="checkbox" />
    <span
      className="grommetux-check-box__control">
      <svg
        className="grommetux-check-box__control-check"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24">
        <path
          d="M6,11.3 L10.3,16 L18,6.2"
          fill="none" />
      </svg>
    </span>
  </span>
</label>
`;

exports[`Checkbox has correct toggle=true rendering 1`] = `
<label
  aria-label="Test Checkbox"
  className="grommetux-check-box grommetux-check-box--toggle">
  <span>
    <input
      checked={undefined}
      className="grommetux-check-box__input"
      defaultChecked={undefined}
      disabled={undefined}
      id="test"
      name={undefined}
      onChange={undefined}
      tabIndex="0"
      type="checkbox" />
    <span
      className="grommetux-check-box__control">
      <svg
        className="grommetux-check-box__control-check"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 24 24">
        <path
          d="M6,11.3 L10.3,16 L18,6.2"
          fill="none" />
      </svg>
    </span>
  </span>
  <span
    className="grommetux-check-box__label">
    Test Checkbox
  </span>
</label>
`;
